# Memes_FastAPI

./: docker-compose.yaml  pyproject.toml  readme.md
fastapi-application/: alembic.ini  main.py
fastapi-application/alembic/versions/: 2024_06_13_1553-f0065ebc9754_create_meme_table.py
fastapi-application/api/: __init__.py
fastapi-application/core/models/: __init__.py  db_helper.py  meme.py
